<?xml version="1.0"?>
<package format="2">
  <name>obstacle_detection</name>
  <version>0.0.1</version>
  <description>Obstacle detection using YOLO and RealSense camera</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>lapx</exec_depend>
  <exec_depend>pyrealsense2</exec_depend>
  <exec_depend>ultralytics</exec_depend>
</package>
